--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 <style>
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500');
+@import url('https://fonts.googleapis.com/css2?family=Mina:wght@400;700&family=Rokkitt:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
   padding: 0;
   margin: 0;
@@ -15,14 +16,12 @@
   text-decoration: none;
 }
 body {
-  font-family: 'Roboto', sans-serif;
-}
+  font-family: "Rokkitt", serif;
 .sidebar {
   position: fixed;
-  left: -250px;
   width: 250px;
   height: 100%;
-  background: #042331;
+  background: black;
   transition: all .5s ease;
 }
 .sidebar header {
@@ -30,7 +29,7 @@ body {
   color: white;
   line-height: 70px;
   text-align: center;
-  background: #063146;
+  background: #ff5e24;
   user-select: none;
 }
 .sidebar ul a{
@@ -43,18 +42,19 @@ body {
   padding-left: 40px;
   box-sizing: border-box;
   border-bottom: 1px solid black;
-  border-top: 1px solid rgba(255,255,255,.1);
+  border-top: 1px solid rgb(255 154 0 / 46%);
   transition: .4s;
 }
 ul li:hover a{
   padding-left: 50px;
+border-top:1px solid red;
+border-bottom:1px solid red;
+color:red;
 }
 .sidebar ul a i{
   margin-right: 16px;
 }
-#check{
-  display: none;
-}
+
 label #btn,label #cancel{
   position: absolute;
   background: #042331;
@@ -69,31 +69,10 @@ label #btn{
   padding: 6px 12px;
   transition: all .5s;
 }
-label #cancel{
-  z-index: 1111;
-  left: -195px;
-  top: 17px;
-  font-size: 30px;
-  color: #0a5275;
-  padding: 4px 9px;
-  transition: all .5s ease;
-}
-#check:checked ~ .sidebar{
-  left: 0;
-}
-#check:checked ~ label #btn{
-  left: 250px;
-  opacity: 0;
-  pointer-events: none;
-}
-#check:checked ~ label #cancel{
-  left: 195px;
-}
-#check:checked ~ section{
-  margin-left: 250px;
-}
+
+
 section{
-  background: url(bg.jpeg) no-repeat;
+  background: #fff8dc;
   background-position: center;
   background-size: cover;
   height: 100vh;
@@ -102,18 +81,11 @@ section{
 </style>
   </head>
   <body>
-    <input type="checkbox" id="check">
-    <label for="check">
-      <i class="fas fa-bars" id="btn"></i>
-      <i class="fas fa-times" id="cancel"></i>
-    </label>
     <div class="sidebar">
-    <header>My App</header>
+    <header>LearnWithAbhishek</header>
     <ul>
-     <li><a href="#"><i class="fas fa-qrcode"></i>Dashboard</a></li>
-     <li><a href="#"><i class="fas fa-link"></i>Shortcuts</a></li>
-     <li><a href="#"><i class="fas fa-stream"></i>Overview</a></li>
-     <li><a href="#"><i class="fas fa-calendar-week"></i>Events</a></li>
+     <li><a href="#"><i class="fas fa-code"></i>Coding</a></li>
+     <li><a href="#"><i class="fas fa-paint-brush"></i>Sketch</a></li>
      <li><a href="#"><i class="far fa-question-circle"></i>About</a></li>
      <li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
      <li><a href="#"><i class="far fa-envelope"></i>Contact</a></li>
