--- a/index.html
+++ b/index.html
@@ -2,95 +2,44 @@
 <!-- Created By CodingNepal -->
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title>Sider Menu Bar CSS</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Mina:wght@400;700&family=Rokkitt:ital,wght@0,100..900;1,100..900&display=swap');
-
-*{
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  text-decoration: none;
-}
-body {
-  font-family: "Rokkitt", serif;
-.sidebar {
-  position: fixed;
-  width: 250px;
-  height: 100%;
-  background: black;
-  transition: all .5s ease;
-}
-.sidebar header {
-  font-size: 22px;
-  color: white;
-  line-height: 70px;
-  text-align: center;
-  background: #ff5e24;
-  user-select: none;
-}
-.sidebar ul a{
-  display: block;
-  height: 100%;
-  width: 100%;
-  line-height: 65px;
-  font-size: 20px;
-  color: white;
-  padding-left: 40px;
-  box-sizing: border-box;
-  border-bottom: 1px solid black;
-  border-top: 1px solid rgb(255 154 0 / 46%);
-  transition: .4s;
-}
-ul li:hover a{
-  padding-left: 50px;
-border-top:1px solid red;
-border-bottom:1px solid red;
-color:red;
-}
-.sidebar ul a i{
-  margin-right: 16px;
-}
-
-label #btn,label #cancel{
-  position: absolute;
-  background: #042331;
-  border-radius: 3px;
-  cursor: pointer;
-}
-label #btn{
-  left: 40px;
-  top: 25px;
-  font-size: 35px;
-  color: white;
-  padding: 6px 12px;
-  transition: all .5s;
-}
-
-
-section{
-  background: #fff8dc;
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-  transition: all .5s;
-}
-</style>
+    <meta charset="utf-8" />
+    <title>LearnWithAbhishek</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
   <body>
-    <div class="sidebar">
-    <header>LearnWithAbhishek</header>
-    <ul>
-     <li><a href="#"><i class="fas fa-code"></i>Coding</a></li>
-     <li><a href="#"><i class="fas fa-paint-brush"></i>Sketch</a></li>
-     <li><a href="#"><i class="far fa-question-circle"></i>About</a></li>
-     <li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
-     <li><a href="#"><i class="far fa-envelope"></i>Contact</a></li>
-    </ul>
-   </div>
-   <section></section>
+    <div id="body-container">
+      <div class="sidebar">
+        <header>LearnWithAbhishek</header>
+        <ul>
+          <li>
+            <a href="/contact.html"><i class="fas fa-code"></i>Coding</a>
+          </li>
+          <li>
+            <a href="/contact.html"><i class="fas fa-paint-brush"></i>Sketch</a>
+          </li>
+          <li>
+            <a href="/contact.html"
+              ><i class="far fa-question-circle"></i>About</a
+            >
+          </li>
+          <li>
+            <a href="/contact.html"><i class="fas fa-sliders-h"></i>Services</a>
+          </li>
+          <li>
+            <a href="/contact.html"><i class="far fa-envelope"></i>Contact</a>
+          </li>
+        </ul>
+      </div>
+      <div id="right-body-part">
+        <div class="contact-container">
+          <!-- <p>Phone/Whatsapp: 7257083585</p> -->
+          <h1>---Comming Soon---</h1>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
