--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
         <header>LearnWithAbhishek</header>
         <ul>
           <li>
-            <a href="/contact.html"><i class="fas fa-code"></i>Coding</a>
+            <a href="contact.html"><i class="fas fa-code"></i>Coding</a>
           </li>
           <li>
-            <a href="/contact.html"><i class="fas fa-paint-brush"></i>Sketch</a>
+            <a href="contact.html"><i class="fas fa-paint-brush"></i>Sketch</a>
           </li>
           <li>
-            <a href="/contact.html"
+            <a href="contact.html"
               ><i class="far fa-question-circle"></i>About</a
             >
           </li>
           <li>
-            <a href="/contact.html"><i class="fas fa-sliders-h"></i>Services</a>
+            <a href="contact.html"><i class="fas fa-sliders-h"></i>Services</a>
           </li>
           <li>
-            <a href="/contact.html"><i class="far fa-envelope"></i>Contact</a>
+            <a href="contact.html"><i class="far fa-envelope"></i>Contact</a>
           </li>
         </ul>
       </div>
