--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <a href="contact.html"><i class="fas fa-code"></i>Coding</a>
           </li>
           <li>
-            <a href="contact.html"><i class="fas fa-paint-brush"></i>Sketch</a>
+            <a href="sketches.html"
+              ><i class="fas fa-paint-brush"></i>Sketches</a
+            >
           </li>
           <li>
             <a href="contact.html"
