--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,12 @@
             <a href="contact.html"><i class="fas fa-code"></i>Coding</a>
           </li>
           <li>
-            <a href="contact.html"><i class="fas fa-paint-brush"></i>Sketch</a>
+            <a href="sketches.html"><i class="fas fa-paint-brush"></i>Sketch</a>
           </li>
           <li>
-            <a href="contact.html"><i class="far fa-question-circle"></i>About</a>
+            <a href="contact.html"
+              ><i class="far fa-question-circle"></i>About</a
+            >
           </li>
           <li>
             <a href="contact.html"><i class="fas fa-sliders-h"></i>Services</a>
